--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,18 @@
 #################### I/O File paths ####################
-workdir: "/data/00/user/user101/software/panpop/example"
+# workdir: Dir contains sample_read.list and will store result files.
+workdir: "example"
+#sample_reads_list_file: File name of sample_read.list. Must located in wirkdir
 sample_reads_list_file: "1.sample.reads.list"
+# Graph-based reference should be renamed as `Ref.gfa` and then placed in `workdir`
 
 #################### Binary Paths ####################
+## Absolute paths are recommended instead of relative paths
 # Required:
 stmsa: "misc/stmsa_0.2.1-ubuntu.20.04_amd64.out"
 bcftools: "misc/bcftools"
 vg: "misc/vg"
 tabix: "misc/tabix"
-# optional but recommanded:
+# Optional but recommanded:
 muscle3: "misc/muscle"
 mafft: ""
 
@@ -26,26 +30,26 @@ dp_max_fold: 3
 # Hard-filter: Min MAD(Minimum site allele depth) for each site is XX fold of mean depth of this sample. Default is 1/3 * 1/3
 mad_min_fold: 0.111
 
+
 #################### Realign Parameters ####################
 # realign_extend: During realign progress, the near by SNP/SVs will be merged together before realign. Values that are too low or too large may lose some accuracy. Default is 10 and 1.
 realign_extend_bp_max: 10
 realign_extend_bp_min: 1
 
 
-
-
-#################### more parameters ####################
-# Minimal length for SVs. Variat more than one base and smaller than this value will treated as InDels. Default is 50.
+#################### More parameters ####################
+# SV_min_length: Minimal length for SVs. Variat more than one base and smaller than this value will treated as InDels. Default is 50.
 SV_min_length: 50
-# realign_max_try_times_per_method. Default is 3.
+# realign_max_try_times_per_method: Default is 3.
 realign_max_try_times_per_method: 3
-# Temprory directory in memory. Must be a very fast disk. Left space can be smaller than 100Mb. Default is /run/user/USERID
+# memory_tmp_dir: Temprory directory in memory. Must be a very fast disk. Left space can be smaller than 100Mb. Default is /run/user/USERID
 memory_tmp_dir: "Default"
-
-
+# mapper: can be either 'map' or 'gaffe'
+mapper: 'gaffe'
 
 
 #################### Resource ####################
+# for minimizer/gaffe mapper
 mem_xg: 60000
 mem_snarls: 120000
 mem_map: 40000
@@ -54,7 +58,7 @@ mem_call: 40000
 mem_pgconvert: 60000
 mem_augment: 70000
 mem_avgdp: 20000
-core_realign: 20000
+mem_realign: 20000
 # cores used in multi-threaded steps
 core_realign: 10
 cores_xg: 20
@@ -64,10 +68,4 @@ cores_pack: 10
 cores_call: 10
 cores_augment: 5
 cores_avgdp: 6
-# mapper can be either 'map' or 'gaffe'
-mapper: 'gaffe'
-# for minimizer/gaffe mapper
-mink: 39
-minw: 15
-covern: 16
 
