--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,9 @@ memory_tmp_dir: "Default"
 mapper: 'gaffe'
 
 
-#################### Resource ####################
+#################### Performance & Resource ####################
+# split_chr: (False/True). Weather split chr for parallel running. This is useful for multi-node clster. Not recommaned for single node. Default is False.
+split_chr: False
 # cores used in multi-threaded steps
 core_realign: 10
 cores_xg: 20
