--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 #################### Basic Parameters ####################
 ## Absolute paths are recommended for workdir and sample_reads_list_file
 # workdir: Dir contains sample_read.list and will store result files.
-workdir: "/group_homes/lzu_public/home/share/zhengzy18/project/cor/b3"
+workdir: "/group_homes/lzu_public/home/share/zhengzy18/project/cor/b4"
 # sample_reads_list_file: File name of sample_read.list. Must located in wirkdir.
 sample_reads_list_file: "1.sample.reads.list"
 # split_chr: (False or True). Weather split by chromosome for parallel running. This is useful for multi-node clster. This option can greatly reduce the memory usage in augment mode. If you only own one computer-node the recommended setting is False. Default is False.
@@ -20,6 +20,7 @@ stmsa: "misc/stmsa_0.2.1-ubuntu.20.04_amd64.out"
 bcftools: "misc/bcftools"
 vg: "misc/vg"
 tabix: "misc/tabix"
+seqs2identity: "src/gotoh/align"
 # Optional but highly recommanded:
 mafft: "/group_homes/lzu_public/home/share/zhengzy18/software/mafft/mafft-7.490-with-extensions_built/bin/mafft"
 muscle3: "misc/muscle"
@@ -29,13 +30,13 @@ minigraph: "misc/minigraph"
 #################### Filter Parameters ####################
 # MAP_MINQ: minimal mapping-quality of each reads for giraffe-mapping in VG. Default is 5.
 MAP_MINQ: 5
-# MAF: Remove alleles than lower than this value. This is necessary and will greatly reduce the complexity of SVs. Default is 0.01.
-MAF: 0.01
+# MAF: Remove alleles than lower than this value in genotype mode only. In genotype, this is necessary and will greatly reduce the complexity of SVs. Default is 0.01.
+genotype_MAF: 0.01
 # max_missing_rate: Max missing rate allowed for each SNPs and SVs. 0 means no missing allowed and 1 means not filter by missing. Default is 0.3 (remove this site if more than 30% samples were missing).
 max_missing_rate: 0.3
 # Hard-filter: Min depth for each site is XX fold of mean depth of this sample. Default is 1/3 ~ 3
 dp_min_fold: 0.333
-dp_max_fold: 3
+dp_max_fold: 10
 # Hard-filter: Min MAD(Minimum site allele depth) for each site is XX fold of mean depth of this sample. Default is 1/3 * 1/3.
 mad_min_fold: 0.111
 
@@ -59,7 +60,11 @@ mapper: 'gaffe'
 aug_nonmut_min_cov: 0.8
 # aug_nomut_min_dp: In augment mode, if the average of depth of SV in reference allele is greater than this value will be treated as exists. Note this value is the first filter parameter, the further filter based on depth will be perfomed. Default is 3.
 aug_nomut_min_dp: 3
-
+# sv2pav_merge_identity_threshold:
+sv2pav_merge_identity_threshold: 0.8
+# ssindel: simple or small indel. Size default is 10.
+ssindel_maxlen: 10
+ssindel_maxallele: 3
 
 
 #################### Performance & Resource ####################
@@ -72,7 +77,7 @@ cores_call: 10
 cores_augment: 5
 cores_avgdp: 6
 cores_realign: 40
-cores_aug_filldp: 5
+cores_aug_filldp: 2
 # for minimizer/gaffe mapper
 mem_xg: 60000
 mem_snarls: 120000
@@ -83,6 +88,6 @@ mem_pgconvert: 60000
 mem_augment: 70000
 mem_avgdp: 20000
 mem_realign: 20000
-mem_aug_filldp: 30000
+mem_aug_filldp: 15000
 
 
