config.yaml add famsa

--- a/config.arm.yaml
+++ b/config.arm.yaml
@@ -15,23 +15,9 @@ graph: 'Ref'
 
 #################### binary paths ####################
 ## absolute paths are recommended instead of relative paths
-## amd64
-# required:
-#stmsa: "misc/stmsa_0.2.1-ubuntu.20.04_amd64.out"
-#bcftools: "misc/bcftools"
-#vg: "misc/vg"
-#tabix: "misc/tabix"
-#bgzip: "misc/bgzip"
-#seqs2identity: "src/gotoh/align"
-# optional but highly recommanded:
-#mafft: "misc/mafft-linux64/mafft.bat"
-#muscle3: "misc/muscle"
-# only for build_graph.pl
-#minigraph: "misc/minigraph"
-#seqs2identity: ""
-
 ## ARM64
 # required:
+famsa: "misc_arm/famsa"
 stmsa: "misc_arm/stmsa"
 bcftools: "misc_arm/bcftools"
 vg: "misc_arm/vg"
