--- a/config.x64.yaml
+++ b/config.x64.yaml
@@ -40,11 +40,13 @@ MAP_MINQ: 5
 genotype_MAF: 0.01
 # max_missing_rate: Max missing rate allowed for each SNPs and SVs. 0 means no missing allowed and 1 means not filter by missing. Default is 0.3 (remove this site if more than 30% samples were missing).
 max_missing_rate: 0.3
-# Hard-filter: Min depth for each site is XX fold of mean depth of this sample. Default is 1/3 ~ 3
-dp_min_fold: 0.333
-dp_max_fold: 10
+# Hard-filter: Min depth for each site is XX fold of mean depth of this sample. Default is 1/4 ~ 4
+dp_min_fold: 0.25
+dp_max_fold: 4
+dp_min_abs: 3
 # Hard-filter: Min MAD(Minimum site allele depth) for each site is XX fold of mean depth of this sample. Default is 1/3 * 1/3.
 mad_min_fold: 0.111
+mad_min_abs: 1
 
 
 #################### Realign Parameters ####################
@@ -56,8 +58,8 @@ realign_extend_bp_min: 1
 #################### More parameters ####################
 # SV_min_length: Minimal length for SVs. Variat more than one base and smaller than this value will treated as InDels. Default is 50.
 SV_min_length: 50
-# realign_max_try_times_per_method: Default is 3.
-realign_max_try_times_per_method: 3
+# realign_max_try_times_per_method: Default is 2.
+realign_max_try_times_per_method: 2
 # memory_tmp_dir: Temprory directory in memory. Must be a very fast disk. Left space can be smaller than 100Mb. Default is `Default` which for `/run/user/USERID`.
 memory_tmp_dir: "Default"
 # mapper: can be either 'map' or 'gaffe'
