--- a/configs/bak.yaml
+++ b/configs/bak.yaml
@@ -19,15 +19,17 @@ graph: 'Ref'
 # required:
 famsa: "misc/famsa"
 stmsa: "misc/stmsa_0.2.1-ubuntu.20.04_amd64.out"
-muscle3: "misc/muscle"
 bcftools: "misc/bcftools"
 vg: "misc/vg"
 tabix: "misc/tabix"
 bgzip: "misc/bgzip"
+seqs2identity: "src/gotoh/align"
 # optional but highly recommanded:
 mafft: "misc/mafft-linux64/mafft.bat"
+muscle3: "misc/muscle"
 # only for build_graph.pl
 minigraph: "misc/minigraph"
+seqs2identity: ""
 
 
 
@@ -56,8 +58,8 @@ realign_extend_bp_min: 1
 #################### More parameters ####################
 # SV_min_length: Minimal length for SVs. Variat more than one base and smaller than this value will treated as InDels. Default is 50.
 SV_min_length: 50
-# realign_max_try_times_per_method: Default is 1.
-realign_max_try_times_per_method: 1
+# realign_max_try_times_per_method: Default is 2.
+realign_max_try_times_per_method: 2
 # memory_tmp_dir: Temprory directory in memory. Must be a very fast disk. Left space can be smaller than 100Mb. Default is `Default` which for `/run/user/USERID`.
 memory_tmp_dir: "Default"
 # mapper: can be either 'map' or 'gaffe'
