--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -1,35 +1,4 @@
 
-#################### Basic Parameters ####################
-## Absolute paths are recommended for workdir and sample_reads_list_file
-# workdir: Dir contains sample_read.list and will store result files.
-workdir: "example"
-# sample_reads_list_file: File name of sample_read.list. Must located in wirkdir.
-sample_reads_list_file: "1.sample.reads.list"
-# split_chr: (False or True). Weather split by chromosome for parallel running. This is useful for multi-node clster. This option can greatly reduce the memory usage in augment mode. If you only own one computer-node the recommended setting is False. Default is True.
-split_chr: True
-# mode: (genotype or augment). `genotype` mode will genotype SVs in the graph-genome. `augment` mode will extract novel SNPs and SVs for each sample. Default is `genotype`.
-mode: "genotype"
-# Graph-based reference should be renamed as `Ref.gfa` and then placed in `workdir`. This value is not recommand for modifing! Default is `Ref`.
-graph: 'Ref'
-
-
-#################### binary paths ####################
-## absolute paths are recommended instead of relative paths
-## ARM64
-# required:
-famsa: "misc_arm/famsa"
-stmsa: "misc_arm/stmsa"
-muscle3: "misc_arm/muscle"
-bcftools: "misc_arm/bcftools"
-vg: "misc_arm/vg"
-tabix: "misc_arm/tabix"
-bgzip: "misc_arm/bgzip"
-## optional but highly recommanded:
-mafft: ""
-# only for build_graph.pl
-minigraph: "misc_arm/minigraph"
-
-
 #################### Filter Parameters ####################
 # MAP_MINQ: minimal mapping-quality of each reads for giraffe-mapping in VG. Default is 5.
 MAP_MINQ: 5
@@ -52,15 +21,13 @@ realign_extend_bp_max: 10
 realign_extend_bp_min: 1
 
 
-#################### More parameters ####################
+#################### More parameters during realign ####################
 # SV_min_length: Minimal length for SVs. Variat more than one base and smaller than this value will treated as InDels. Default is 50.
 SV_min_length: 50
-# realign_max_try_times_per_method: Default is 1.
-realign_max_try_times_per_method: 1
+# realign_max_try_times_per_method: Default is 2.
+realign_max_try_times_per_method: 2
 # memory_tmp_dir: Temprory directory in memory. Must be a very fast disk. Left space can be smaller than 100Mb. Default is `Default` which for `/run/user/USERID`.
 memory_tmp_dir: "Default"
-# mapper: can be either 'map' or 'gaffe'
-mapper: 'gaffe'
 # aug_nonmut_min_cov: In augment mode, if the coverage of SV in reference allele is greater than this value will be treated as exists. Note this value is the first filter parameter, the further filter based on depth will be perfomed. Defalut is 0.8.
 aug_nonmut_min_cov: 0.8
 # aug_nomut_min_dp: In augment mode, if the average of depth of SV in reference allele is greater than this value will be treated as exists. Note this value is the first filter parameter, the further filter based on depth will be perfomed. Default is 3.
@@ -83,6 +50,8 @@ cores_augment: 5
 cores_avgdp: 6
 cores_realign: 40
 cores_aug_filldp: 2
+cores_ngmlr_map: 40
+cores_sv3_call: 20
 # for minimizer/gaffe mapper
 mem_xg: 60000
 mem_snarls: 120000
@@ -94,5 +63,7 @@ mem_augment: 70000
 mem_avgdp: 20000
 mem_realign: 20000
 mem_aug_filldp: 15000
+mem_ngmlr_map: 40000
+mem_sv3_call: 40000
 
 
