--- a/configs/software.yaml
+++ b/configs/software.yaml
@@ -1,32 +1,1 @@
-
-#################### binary paths ####################
-## absolute paths are recommended instead of relative paths
-## amd64
-# required:
-famsa: "famsa"
-stmsa: "misc/stmsa_0.2.1-ubuntu.20.04_amd64.out"
-muscle3: "muscle"
-bcftools: "bcftools"
-vg: "vg"
-tabix: "tabix"
-bgzip: "bgzip"
-
-# Only for SV caller for raw long reads
-ngmlr: 'ngmlr'
-sniffles: 'sniffles'
-cutesv: 'cuteSV'
-svim: 'svim'
-picard: 'picard'
-pbsv: 'pbsv'
-nucmer: 'nucmer'
-deltafilter: 'delta-filter'
-showcoords: 'show-coords'
-assemblytics: 'Assemblytics'
-bedtools: 'bedtools'
-
-
-# optional but highly recommanded:
-mafft: "mafft"
-# only for build_graph.pl
-minigraph: "minigraph"
-
+software.x86.yaml
