--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -2,7 +2,7 @@
 #################### Filter Parameters ####################
 # MAP_MINQ: minimal mapping-quality of each reads for giraffe-mapping in VG. Default is 5.
 MAP_MINQ: 5
-# MAF: Remove alleles than lower than this value in genotype mode only. In genotype, this is necessary and will greatly reduce the complexity of SVs. Default is 0.01.
+# MAF: Remove alleles than lower than this value in genotype mode only. In genotype, this is recommanded and will greatly reduce the complexity of SVs. Default is 0.01.
 genotype_MAF: 0.01
 # max_missing_rate: Max missing rate allowed for each SNPs and SVs. 0 means no missing allowed and 1 means not filter by missing. Default is 0.3 (remove this site if more than 30% samples were missing).
 max_missing_rate: 0.3
@@ -24,17 +24,17 @@ realign_extend_bp_min: 1
 #################### More parameters during realign ####################
 # SV_min_length: Minimal length for SVs. Variat more than one base and smaller than this value will treated as InDels. Default is 50.
 SV_min_length: 50
-# realign_max_try_times_per_method: Default is 2.
-realign_max_try_times_per_method: 2
+# realign_max_try_times_per_method: Default is 1.
+realign_max_try_times_per_method: 1
 # memory_tmp_dir: Temprory directory in memory. Must be a very fast disk. Left space can be smaller than 100Mb. Default is `Default` which for `/run/user/USERID`.
 memory_tmp_dir: "Default"
 # aug_nonmut_min_cov: In augment mode, if the coverage of SV in reference allele is greater than this value will be treated as exists. Note this value is the first filter parameter, the further filter based on depth will be perfomed. Defalut is 0.8.
 aug_nonmut_min_cov: 0.8
 # aug_nomut_min_dp: In augment mode, if the average of depth of SV in reference allele is greater than this value will be treated as exists. Note this value is the first filter parameter, the further filter based on depth will be perfomed. Default is 3.
 aug_nomut_min_dp: 3
-# sv2pav_merge_identity_threshold:
+# During thin process, minimal sequence similarity of alleles to be merged. Default is 0.8
 sv2pav_merge_identity_threshold: 0.8
-# ssindel: simple or small indel. Size default is 10.
+# ssindel: simple or small indel. Size default is 10 and 3.
 ssindel_maxlen: 10
 ssindel_maxallele: 3
 
